# scripion

./: README.md  index.html  package-lock.json  package.json  scripion.db  vite.config.ts
src/: App.tsx  AppProvider.tsx  index.scss
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/sql/: add-workspace.sql  create-workspace-table.sql  select-all-workspaces.sql
src-tauri/src/: main.rs
src/components/: HistoryCommandListItem.tsx  HistoryDirectoriesTab.tsx  HistoryScriptsTab.tsx  HistoryTabHeader.tsx  ScriptItemList.tsx  ScriptItemListItem.tsx  SystemScriptsTab.tsx  WorkspaceContainer.tsx  WorkspaceHeader.tsx  WorkspaceListTab.tsx  index.ts
src/constants/: theme.ts
src/constants/commands/: homebrew.ts
src/hooks/: useBackendInvoker.ts  useWorkspaceAction.ts
src/models/: index.ts  script-item.ts
src/stores/: index.ts  useScriptManagerStore.ts
src/utils/: date.util.ts  index.ts  object.util.ts  string.util.ts
